# sentiment-analysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  commands.py  docker-compose.yml  pyproject.toml
covid_tweet_analysis/: constants.py  embeddings_model.py  infer.py  test.py  train.py
