[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = "MLops project"
authors = ["Farid <mustafin-farid@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
fire = "0.7.0"
lightgbm = "4.5.0"
pandas = "2.2.3"
scikit-learn = "1.6.0"
numpy = "1.26.4"
requests = "2.32.3"



[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"
black = "24.10.0"
isort = "5.13.2"
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
